--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
+name = "KnowledgeWarehouse"
+authors = [{name = "payne wu", email = "wuzhipeng1289690157@gmail.com"}]
 dynamic = ["version", "description"]
